--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,15 @@ after_success:
   - docker push jicamon/multi-nginx
   - docker push jicamon/multi-server
   - docker push jicamon/multi-worker
- 
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-525314187058'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
